# OCR

./: .gitignore  .main.c.swp  CMakeLists.txt  Makefile  OCR  README.md  datasaved.txt  download.sh  main  main.c  text.txt
BDI/: exemplealphabet.pub
BDI/Training/arialalphabet/: 1  10  13  14  15  16  18  19  20  21  24  3  30  31  32  33  36  38  42  43  44  45  48  50  51  52  53  55  58  6  60  7  9
BDI/Training/comicssmsalphabet/: 0  1  12  15  16  18  2  22  3  (+26 more)
Image Analysis/TestOCR/: Makefile  OCR  README  letter.c  letter.h  loadandprocess.c  loadandprocess.h  main.c  main.h  otsu.c  otsu.h  renegade.c  renegade.h  segmentation.c  segmentation.h
Image Analysis/tests/: main.c
ImageAnalysis/TestOCR/: OCR  letter.c  letter.h  loadandprocess.c  main.c  main.h  otsu.c  renegade.h  segmentation.c  segmentation.h
network/: CMakeLists.txt  Makefile  datasaved.txt  main.c  xor_network.c  xor_network.h
network/c/: Makefile  main.c  structures.h  xor_network.c  xor_network.h
network/c#/network/: network.sln
network/c#/network/network/: Program.cs  network.csproj
network/c#/network/network/Properties/: AssemblyInfo.cs
network/nn2/: CMakeLists.txt  Makefile  datasaved.txt  main  main.c  networkV2.c  networkV2.h  xor_network.c  xor_network.h
network/nn2/matrix/: CMakeLists.txt  datasaved.txt  main.c  matrix.c  matrix.h  xor_network.c  xor_network.h
network/python/: neuralnet.py  xor_backprop.py
networkexamples/test softmax/: datasaved.txt
nn2/: .networkV2.c.swp  CMakeLists.txt  networkV2.c  networkV2.h
nn2/matrix/: .matrix.c.swp  matrix.c  matrix.h
(+310 files in other folders)
